--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 gateway.ip-address=192.168.1.7
-token.secret=ghjgfjgfjjfgjg
-token.expiration_time=6000000
+token.secret=kuldeep
+token.expiration_time=8800000
 
 login.url.path=/users/login
